Added discord integration
